<resources>
    <string name="app_name">SerraFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_reservations">Reservations</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">Welcome!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Re-enter password</string>
    <string name="prompt_username">User name</string>
    <string name="action_login">Log in</string>
    <string name="register_text">Click below if you do not have an account yet</string>
    <string name="action_register">Register</string>
    <string name="action_create_user">Create user</string>
    <string name="welcome">"Welcome !"</string>
    <string name="logout_slideshow">Log out</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="regex_str">[^a-z0-9 ]</string>
    <string name="add_new_session">Add training day</string>
    <string name="default_date">Wednesday 29/06/1988</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Select a date</string>
    <string name="time">Select a time</string>
    <string name="capacity">Select maximum capacity</string>
    <string name="close">Close</string>

</resources>